--- a/index.html
+++ b/index.html
@@ -1,62 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .first-section {
-      background-color: white;
-    }
-
-    .section-image-container {
-      padding: 10px;
-      /* Add padding */
-      margin-top: 40px;
-      /* Add margin */
-      margin-left: 10px;
-    }
-
-    .section-image {
-      max-width: 100%;
-      height: 500px;
-      transition: transform 0.3s ease-in-out;
-      /* Add a smooth transition effect */
-    }
-
-    .section-image:hover {
-      transform: scale(1.05);
-      /* Scale up the image on hover */
-    }
-  </style>
-</head>
 
 <body>
-  <section class="first-section">
-    <div class="container-fluid h-100 py-4">
-      <div class="row h-100">
-        <div class="col-md-6 d-flex align-items-center">
-          <div>
-            <h1 class="text-primary font-weight-bold mb-4 display-2">Create and issue <br> digital certificates <br> in minutes</h1>
-            <p class="text-muted" style="padding-bottom: 20px; font-size: 20px">With our platform, you can effortlessly generate customized certificates and credentials for your recipients. Whether it's for awards, achievements, or acknowledgments, our one-click solution simplifies the process.</p>
-
-            <div class="mt-5">
-              <a href="#" class="btn btn-lg btn-primary mb-2 mb-md-0">Explore more <span class="text-white font-weight-bold">›</span></a>
-              <a href="#" class="btn btn-lg btn-outline-primary ml-3 mb-2 mb-md-0">Samples <span class="text-primary font-weight-bold">›</span></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-10">
-          <div class="section-image-container">
-            <img class="img-fluid rounded section-image" src="hero-section.jpeg" alt="Placeholder image">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
