add the why, who section

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
       <div class="col-md-6 d-flex align-items-center" style="color: #000000;">
         <div>
-            <h1 class="text-primary font-weight-bold mb-4 display-1" style="margin-top: 50px; font-size: 4.5rem;">Welcome to Chat with Buddy</h1>
+            <h1 class="text-primary font-weight-bold mb-4 display-1" style="margin-top: 50px; font-size: 4.5rem;">Welcome to Chat with KrishnaVani</h1>
             <p class="text-muted" style="padding-bottom: 20px; font-size: 1.25rem;">Your go-to chat companion!</p>
-            <p style=" font-size: 1.25rem" ;>Chat with Buddy is your reliable chat companion, available anytime and anywhere. Here are some key features:</p>
+            <p style=" font-size: 1.25rem" ;>Chat with KrishnaVani is your reliable chat companion, available anytime and anywhere. Here are some key features:</p>
             <ul style="font-size: 1.25rem;">
                 <li>24/7 Chat Support 🕒</li>
                 <li>Personalized Conversations 💬</li>
@@ -120,11 +120,30 @@
 <style>
 .hero-section {
   background-image: url('MicrosoftTeams-image__55_.webp');
-  background-size: cover; /* Cover the entire section */
-  background-position: center; /* Center the background image */
-  height: calc(100vh - 65px); /* Set the height of the section to 100% viewport height minus navbar height */
-  width: 100%; /* Set the width to cover the entire viewport */
-  color: #ffffff; /* Set text color to white for better contrast */
+  background-size: cover;
+  background-position: center;
+  height: calc(100vh - 65px);
+  width: 100%;
+  color: #ffffff;
+  animation: pulse 2s infinite alternate, expand 5s forwards; /* Add animation with pulse effect and expand after 10 seconds */
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1); /* Initial size */
+  }
+  100% {
+    transform: scale(0.9); /* Reduced size */
+  }
+}
+
+@keyframes expand {
+  0% {
+    transform: scale(0.9); /* Start from the reduced size */
+  }
+  100% {
+    transform: scale(1); /* Expand to the original size */
+  }
 }
 
 .container-right {
@@ -158,6 +177,166 @@
 
 
 
+<hr>
+  <!-- why who section -->
+
+<style>
+  /* Custom CSS to reduce image size */
+  .reduce-image-size img {
+      max-width: 100%; /* Adjust the percentage as needed */
+      height: auto;
+    margin-top: 0px;
+  }
+
+  /* Adjust spacing */
+  .section-content {
+      padding-top: 0px; /* Adjust as needed */
+  }
+
+  .section-content h1
+  {
+    font-size: 28px; /* Adjust the font size as needed */
+      line-height: 1.2;
+      margin-top: 0; /* Remove top margin */
+      color: #333; /* Default text color */
+      text-align: left; /* Align text to the left */
+  }
+  .section-content p {
+      font-size: 18px; /* Adjust the font size as needed */
+      line-height: 1.5;
+      margin-top: 0; /* Remove top margin */
+      color: #333; /* Default text color */
+      text-align: left; /* Align text to the left */
+  }
+
+  /* Additional Styles */
+  .title-font {
+      color: #1abc9c; /* Title text color */
+  }
+
+  .btn-primary {
+      background-color: #1abc9c; /* Button background color */
+      border-color: #1abc9c; /* Button border color */
+      color: #fff; /* Button text color */
+      font-weight: bold;
+  }
+</style>
+
+</head>
+<body class="bg-gray-900 text-gray-400">
+  <section class="py-5 reduce-image-size">
+      <div class="container mx-auto">
+          <div class="row align-items-start">
+            <div class="col-lg-6 col-md-12 mb-5 mb-lg-0">
+              <img class="img-fluid rounded" alt="hero" src="Friendly LiveBot.gif" style="width: 120%; height: auto;">
+          </div>
+
+              <div class="col-lg-6 col-md-10">
+                  <div class="section-content">
+                      <h1 class="title-font sm:text-4xl text-3xl mb-2 font-medium text-dark text-center text-md-left mt-0">Welcome to KrishnaVani: Your Real Digital Buddy</h1>
+                      <p class="mb-8 leading-relaxed">At KrishnaVani, we've crafted a virtual companion like no other. Say hello to KrishnaVani – your AI-powered chatbot ready to engage in meaningful conversations, offer support, and provide entertainment, just like a real buddy would.</p>
+                      <p class="mb-8 leading-relaxed">hink of KrishnaVani as your personal cheerleader, always rooting for your happiness and well-being. With KrishnaVani by your side, you'll never have to face life's challenges alone. So, why wait? Start chatting with KrishnaVani today and experience the joy of having a real digital buddy!</p>
+                      <div class="d-flex justify-content-center justify-content-md-center">
+                          <a href="#" class="btn btn-lg btn-primary mb-2 mb-md-0">Lets chat <span class="text-white font-weight-bold">›</span></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <section class="py-5 reduce-image-size">
+      <div class="container mx-auto">
+          <div class="row align-items-start">
+              <div class="col-lg-6 col-md-10">
+                  <div class="section-content">
+                      <h1 class="title-font sm:text-4xl text-3xl mb-2 font-medium text-dark text-center text-md-left mt-0">Who is KrishnaVani?
+                      </h1>
+                      <p class="mb-8 leading-relaxed">KrishnaVani is your digital friend, meticulously designed to bridge the gap between technology and human connection. With advanced natural language processing, KrishnaVani understands your words, adapts to your preferences, and makes every interaction feel like chatting with your real buddy.</p>
+
+                      <p class="mb-8 leading-relaxed">This digital friend is not bound by time or space, ensuring that you always have someone to turn to, no matter the hour or your location. With its ability to understand nuances in language and emotions, KrishnaVani offers a level of empathy and understanding that rivals that of human companions. It's like having a trusted friend by your side, ready to listen without judgment and offer insightful responses that resonate with you.</p>
+                      <div class="d-flex justify-content-center justify-content-md-center">
+                          <a href="#" class="btn btn-lg btn-primary mb-2 mb-md-0">Enroll my institute <span class="text-white font-weight-bold">›</span></a>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-lg-6 col-md-12 mb-5 mb-lg-0">
+                  <img class="img-fluid rounded" alt="hero" src="Live Chatbot.gif  ">
+              </div>
+          </div>
+      </div> 
+  </section>
+
+  <body class="bg-gray-900 text-gray-400">
+    <section class="py-5 reduce-image-size">
+        <div class="container mx-auto">
+            <div class="row align-items-start">
+              <div class="col-lg-6 col-md-12 mb-5 mb-lg-0">
+                <img class="img-fluid rounded" alt="hero" src="Friendly LiveBot.gif" style="width: 120%; height: auto;">
+            </div>
+  
+                <div class="col-lg-6 col-md-10">
+                    <div class="section-content">
+                        <h1 class="title-font sm:text-4xl text-3xl mb-2 font-medium text-dark text-center text-md-left mt-0">Why Choose KrishnaVani?</h1>
+                        <p class="mb-8 leading-relaxed">
+                          * <strong>Engaging Conversations</strong> 💬<br>
+                          * <strong>Alleviate Loneliness</strong> 🤝<br>
+                          * <strong>Privacy-Conscious Design</strong> 🔒<br>
+                          * <strong>Adaptive and Natural</strong> 🔄<br>
+                          * <strong>Mental Health Support</strong> 💬<br>
+                          * <strong>24/7 Availability</strong> 🕒<br>
+                          * <strong>Non-judgmental Listening</strong> 🎧<br>
+                          * <strong>Personalized Interaction</strong> 🤖<br>
+                          * <strong>Continuous Learning</strong> 📚<br>
+                          * <strong>Emotional Intelligence</strong> ❤️<br>
+                      </p>
+                      
+                        <div class="d-flex justify-content-center justify-content-md-center">
+                            <a href="#" class="btn btn-lg btn-primary mb-2 mb-md-0">Lets chat <span class="text-white font-weight-bold">›</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  
+    <section class="py-5 reduce-image-size">
+        <div class="container mx-auto">
+            <div class="row align-items-start">
+                <div class="col-lg-6 col-md-10">
+                    <div class="section-content">
+                        <h1 class="title-font sm:text-4xl text-3xl mb-2 font-medium text-dark text-center text-md-left mt-0">Who is KrishnaVani?
+                        </h1>
+                        <p class="mb-8 leading-relaxed">KrishnaVani is your digital friend, meticulously designed to bridge the gap between technology and human connection. With advanced natural language processing, KrishnaVani understands your words, adapts to your preferences, and makes every interaction feel like chatting with your real buddy.</p>
+  
+                        <p class="mb-8 leading-relaxed">This digital friend is not bound by time or space, ensuring that you always have someone to turn to, no matter the hour or your location. With its ability to understand nuances in language and emotions, KrishnaVani offers a level of empathy and understanding that rivals that of human companions. It's like having a trusted friend by your side, ready to listen without judgment and offer insightful responses that resonate with you.</p>
+                        <div class="d-flex justify-content-center justify-content-md-center">
+                            <a href="#" class="btn btn-lg btn-primary mb-2 mb-md-0">Enroll my institute <span class="text-white font-weight-bold">›</span></a>
+                        </div>
+                    </div>
+                </div>
+  
+                <div class="col-lg-6 col-md-12 mb-5 mb-lg-0">
+                    <img class="img-fluid rounded" alt="hero" src="Live Chatbot.gif  ">
+                </div>
+            </div>
+        </div> 
+    </section>
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <hr>
@@ -183,6 +362,8 @@
     </div>
   </div>
 </section>
+
+
 
 <style>
 .hero2-section {
@@ -217,7 +398,11 @@
 }
 </style>
 
-</style>
+
+
+
+
+
 
 
   
