krshiavni,features,about us all the page add added and the website is complention is 90%

--- a/contact-us.html
+++ b/contact-us.html
@@ -68,16 +68,16 @@
                           <a class="nav-link" href="/">Home</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="">Buddy-KrishnaVani</a>
+                          <a class="nav-link" href="KrishnaVani_page.html">Buddy-KrishnaVani</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="">Features</a>
+                          <a class="nav-link" href="Features.html">Features</a>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item active">
                           <a class="nav-link" href="contact-us.html">Contact Us</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="hero-section.html">About Us</a>
+                          <a class="nav-link" href="About-us.html">About Us</a>
                       </li>
                   </ul>
               </div>
