--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav ml-auto">
                       <li class="nav-item">
-                          <a class="nav-link" href="/">Home</a>
+                          <a class="nav-link" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="KrishnaVani_page.html">Buddy-KrishnaVani</a>
