--- a/About-us.html
+++ b/About-us.html
@@ -194,7 +194,7 @@
       <img src="TensorFlow.png" alt="Image 2">
       <img src="next js.png" alt="Image 3">
       <img src="hcj.jpeg" alt="Image 4">
-      <img src="mangodb.png" alt="Image 5">
+      <img src="php-logo1.png" alt="Image 5">
       <img src="talwind-css.png" alt="Image 10">
       <img src="Android-logo.jpg" alt="Image 6">
      <!-- <img src="xml.jpg" alt="Image 7"> -->
